# bitcask-rs

./: .gitignore  Cargo.toml  README.md  git_logs.txt  note.md
benches/: kv_bench.rs
bitcask/: Cargo.toml
bitcask/src/: errors.rs  lib.rs  main.rs
bitcask/src/batch/: mod.rs  utils.rs  write_batch.rs
bitcask/src/data/: log_record.org.rs  mod.rs
bitcask/src/db/: engine.rs  mod.rs  stat.rs  utils.rs
bitcask/src/fio/: file_io.rs  io_manager.rs  mmap.rs  mod.rs
bitcask/src/index/: bptree.rs  bptree_iterator.rs  btree.rs  btree_iterator.rs  index_iterator.rs  indexer.rs  mod.rs  skip_iterator.rs  skiplist.rs
bitcask/src/merge/: engine.rs  mod.rs  utils.rs
bitcask/src/options/: index_type.rs  io_type.rs  iterator_options.rs  mod.rs  options.rs  write_batch_options.rs
bitcask/src/utils/: file.rs  mod.rs  rand_kv.rs
examples/: basic.rs  basic_operations.rs
http/: Cargo.toml
http/src/: main.rs
redis/: Cargo.toml
redis/src/: generic.rs  lib.rs  main.rs  meta.rs  types.rs
src/: batch.rs  db.rs  db_tests.rs  errors.rs  iterator.rs  lib.rs  merge.rs  options.rs
src/data/: data_file.rs  log_record.rs  log_record2.rs  mod.rs
src/data/data_file/: data_file.rs  mod.rs  utils.rs
src/db/: db.rs  db_tests.rs  mod.rs  utils.rs
src/fio/: file_io.rs  mmap.rs  mod.rs
src/index/: bptree.rs  btree.legacy.rs  btree.rs  index_iterator.rs  indexer.rs  mod.rs  old.btree.rs  skiplist.rs  utils.rs
src/index/bptree/: mod.rs  (+1 more)
src/options/: index_type.rs  io_type.rs  iterator_options.rs  mod.rs  options.rs  write_batch_options.rs
src/util/: file.rs  rand_kv.rs
(+21 files in other folders)
