[package]
name = "bitcask-rs"
version = "1.0.0"
edition = "2021"

[[example]]
name = 'basic_operations'
path = 'examples/basic_operations.rs'

[[bench]]
name = "kv_bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
log = "0.4.0"
env_logger = "0.11.5"
thiserror = "1.0.38"
bytes = "1.4.0"
prost = "0.13.3"
crc32fast = "1.3.2"
crossbeam-skiplist = "0.1.1"
jammdb = "0.11.0"
fs2 = "0.4.3"
memmap2 = "0.9.5"
fs_extra = "1.3.0"
criterion = "0.5.1"
rand = "0.8.5"

[workspace]
members = [
    "http",
    "redis"
]
